intel/bench_214_new/extr_.Craftdepsglfwsrccontext.c__glfwChooseFBConfig_with_main/log.txt
bench_214_new/extr_.Craftdepsglfwsrccontext.c__glfwChooseFBConfig_with_main/extr_.Craftdepsglfwsrccontext.c__glfwChooseFBConfig_with_main.c:28:36: error: use of undeclared identifier 'NULL'
    const _GLFWfbconfig* closest = NULL;
                                   ^
1 error generated.
HLS FPGA Parse FAILED.
